--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,6 +33,7 @@
     "@backstage/plugin-catalog-react": "^1.8.0",
     "@backstage/plugin-github-actions": "^0.6.1",
     "@backstage/plugin-gocd": "^0.1.27",
+    "@backstage/plugin-kubernetes": "^0.10.3",
     "@backstage/plugin-org": "^0.6.10",
     "@backstage/plugin-permission-react": "^0.4.14",
     "@backstage/plugin-scaffolder": "^1.14.1",
