--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -46,6 +46,7 @@
     "@backstage/plugin-user-settings": "^0.7.5",
     "@backstage/theme": "^0.4.1",
     "@enfuse/chatgpt-plugin-frontend": "^1.1.1",
+    "@k-phoen/backstage-plugin-grafana": "^0.1.22",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "history": "^5.0.0",
