--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -50,6 +50,7 @@
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "@roadiehq/backstage-plugin-github-pull-requests": "^2.5.18",
+    "@roadiehq/backstage-plugin-security-insights": "^2.3.9",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
