--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -51,6 +51,7 @@
     "@material-ui/icons": "^4.9.1",
     "@roadiehq/backstage-plugin-github-pull-requests": "^2.5.18",
     "@roadiehq/backstage-plugin-security-insights": "^2.3.9",
+    "backstage-plugin-bulletin-board": "^0.4.1",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
