Add plugin for Sonarqube and refactor

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -153,3 +153,7 @@ grafana:
   # See: https://grafana.com/blog/2021/06/14/the-new-unified-alerting-system-for-grafana-everything-you-need-to-know/
   # Optional. Default: false
   unifiedAlerting: false
+
+sonarqube:
+  baseUrl: http://localhost:9000
+  apiKey: ${SONAR_API_KEY}
