--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -33,6 +33,7 @@
     "@backstage/plugin-search-backend": "^1.3.3",
     "@backstage/plugin-search-backend-module-pg": "^0.5.8",
     "@backstage/plugin-search-backend-node": "^1.2.3",
+    "@backstage/plugin-sonarqube-backend": "^0.2.8",
     "@backstage/plugin-techdocs-backend": "^1.6.4",
     "@enfuse/plugin-chatgpt-backend": "^1.1.1",
     "app": "link:../app",
